# Message-API

./: .env  README.md  pyproject.toml
MessagesApp/: apps.py  models.py  serializers.py  urls.py  views.py
MessagesApp/migrations/: 0001_initial.py
db/: docker-compose.yml
messageApi/: asgi.py  settings.py  urls.py  wsgi.py
messages/: apps.py  models.py  serializers.py  urls.py  views.py
messages/migrations/: 0001_initial.py  0002_message_online.py  0003_remove_message_online.py  0004_message_online.py  0005_remove_message_online.py  0006_message_online.py  0007_remove_message_online.py
